@@ -1,2 +1,6 @@
 # Diseases_Diagnosis
 Diseases Diagnosis with JavaFX
+
+You have to install the libraries from Lib folder
+
+Before Run: go to -> Run As -> Run Configuration -> Choose The main class -> Arguments -> VM Arguments -> --module-path "\path\to\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml
